--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -60,7 +60,7 @@
           ],
       });
 
-   var user_accordion = $("#accordion").accordion({
+   $("#accordion").accordion({
        navigation : true,
        header     : 'fieldset legend'
    });
