add margins to the "show all modules" link by the means of a fieldset

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -87,8 +87,8 @@
 
 
 
-<div class="content">
+<fieldset>
   <a href="controlpanel/show_all"><%= _("Show all modules") %></a>
-</div>
+</fieldset>
 
 </div>
