--- a/webclient/public/stylesheets/jquery-ui-1.7.2.custom-accordion.css
+++ b/webclient/public/stylesheets/jquery-ui-1.7.2.custom-accordion.css
@@ -20,15 +20,10 @@
   min-height: 0 !important;
 }
 
-fieldset h4 {
-  margin: 0;
-  /* icon is 16x16 pixels an must not owerflow to next line */
-  min-height: 16px;
-}
-
 .ui-accordion .ui-accordion-li-fix { display: inline; }
 .ui-accordion .ui-accordion-header a { display: block; font-size: 1em; padding: .5em .5em .5em 2.2em; }
-.ui-accordion .ui-accordion-header .ui-icon { float:left; }
+
+
 .ui-accordion .ui-accordion-content { 
   display: none; 
   border: none;
@@ -36,23 +31,40 @@ fieldset h4 {
 }
 .ui-accordion .ui-accordion-content-active { display: block; }
 
-/* Icons
-----------------------------------*/
+/* Reset regular jquery-ui styles inside accordion */
 
-/* states and images */
-.ui-icon { display: block; text-indent: -99999px; overflow: hidden; background-repeat: no-repeat; }
+.ui-accordion .ui-corner-top {
+  -moz-border-radius-topleft:0px;
+  -moz-border-radius-topright:0px;
+}
 
-/* states and images */
-.ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_222222_256x240.png); }
-.ui-widget-content .ui-icon {background-image: url(images/ui-icons_222222_256x240.png); }
-.ui-widget-header .ui-icon {background-image: url(images/ui-icons_222222_256x240.png); }
-.ui-state-default .ui-icon { background-image: url(images/ui-icons_888888_256x240.png); }
-.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(images/ui-icons_454545_256x240.png); }
-.ui-state-active .ui-icon {background-image: url(images/ui-icons_454545_256x240.png); }
-.ui-state-highlight .ui-icon {background-image: url(images/ui-icons_2e83ff_256x240.png); }
-.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(images/ui-icons_cd0a0a_256x240.png); }
+.ui-accordion .ui-state-active, 
+.ui-accordion .ui-widget-content .ui-state-active, 
+.ui-accordion .ui-state-default, 
+.ui-accordion .ui-widget-content .ui-state-default {
+  background: none;
+  border: none;
+  color: #333333;
+}
 
-/* positioning */
-.ui-icon-triangle-1-e { background-position: -32px -16px; }
-.ui-icon-triangle-1-s { background-position: -64px -16px; }
+.ui-accordion legend.ui-state-active, 
+.ui-accordion .ui-widget-content legend.ui-state-active,
+.ui-accordion legend.ui-state-default, 
+.ui-accordion .ui-widget-content legend.ui-state-default {
+  font-weight: bold;
+  font-size:1em;
+}
 
+.ui-accordion .ui-accordion-header .ui-icon {
+  float:left;
+  left:0.5em;
+  margin-top: 0px;
+  position: inherit;
+}
+
+.ui-accordion .ui-corner-all {
+  -moz-border-radius-bottomleft:0px;
+  -moz-border-radius-bottomright:0px;
+  -moz-border-radius-topleft:0px;
+  -moz-border-radius-topright:0px;
+}
