link to back instead of a button (bnc#584598)

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -92,8 +92,9 @@ $(document).ready(function() {initMenuBar();});
 </ul>
 </fieldset>
 <fieldset>
-<%= form_back_button + form_str_spacer %>
-<%= link_to _("Edit Limits"), '/status/edit', :class => "button" %>
+<%= link_to _("Back"), :controller => "controlpanel" %> 
+<%= form_str_spacer %>
+<%= link_to  _("Edit Limits"), '/status/edit', :class => "button" %>
 </fieldset>
 </div>
 
