--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -45,7 +45,7 @@
   <% end -%>
 <% end %>
 
-<div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Timezone, Date and Time")%></div>
+<div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Time")%></div>
 
 <div class="plugin-content grid_12">
   <% form_tag '/systemtime/update', {:class => 'container', :onsubmit => "submitTime();"} do %>
