Style for passwd strength bar

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -709,3 +709,22 @@ input {
   background: #7AD3FF;
 }
 
+/* Password strength indicator */
+
+#password-strength {
+  border: 1px solid #aaa;
+  font-size: 0.8em;
+  height: 5ex;
+  padding: 0.3em;
+  width: 40em;
+  position: relative;
+  left: 15em;
+  top: 1ex;
+}
+
+.password-strength-bar {
+  height: 3px;
+}
+
+
+
