Adding description to passwd strength bar

--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -39,7 +39,8 @@
       });
 
       $("#administrator_password").pstrength({
-	  'displayMinChar'	: false,
+	  'displayMinChar'	: true,
+	  'minCharText'		: 'Password Strength: ',
 	  'verdicts'		: [
 	    "<%= _("Weak") %>",
 	    "<%= _("Normal") %>",
