--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -2,6 +2,12 @@
   <%= javascript_include_tag :defaults %>
 <% end %>
 
+<% javascript_tag do %>
+	function showNew() {
+		$("#new_role").show();
+	}
+<% end %>
+
 <div class='plugin-icon'><img src='/icons/yast-permissions.png' alt="Roles module"/><%=_("Roles")%></div>
 
 <div class="plugin-content grid_12">
@@ -10,13 +16,11 @@
 			<%= link_to role.name, "/roles/edit/#{role.name}", :class => "button" %>
 		</div>
 	<% end %>
-	<div onClick="$(\".new_role\").show();"> <a>Create new role</a> </div>
-	<div id="new_role" style="visibility=hidden">
-		<fieldset>
+	<div > <a onClick="showNew();">Create new role</a> </div>
+	<div id="new_role" style="visibility:hidden">
   		<% form_tag '/roles/create', {:class => 'container'} do %>
     	<label for="role_name"> Name </label><%= text_field_tag "role_name", ""%>
 			<%= submit_tag "create" %>
 			<% end %>
-		</fieldset>
 	</div>
 </div>
