Don't claim WebYaST is still in alpha (bnc#570440).

--- a/webclient/app/views/shared/exception_trap.html.erb
+++ b/webclient/app/views/shared/exception_trap.html.erb
@@ -7,7 +7,7 @@ $(document).ready(function() {
 
 <h1><%= _("This is embarrasing....") %></h1>
 
-<p><%= _("We are sorry, but WebYaST is still in alpha and there are some problems.") %></p>
+<p><%= _("We are sorry, but there are some problems.") %></p>
 
 <h3><%= _("Problem:") %></h3>
 
