--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -50,7 +50,8 @@
    });
 
    $("#user_user_password").pstrength({
-     'displayMinChar'        : false,
+     'displayMinChar'        : true,
+     'minCharText'      : 'Password Strength:', 
        'verdicts'                : [
             "<%= _("Weak") %>",
             "<%= _("Normal") %>",
