adapt to backend to show description of permission

--- a/plugins/roles/app/views/roles/_role_edit.erb
+++ b/plugins/roles/app/views/roles/_role_edit.erb
@@ -1,11 +1,17 @@
 <div>
 	<% Rails.logger.info "permissions #{permissions.inspect}" %>
-	<% permissions.each do |p| %>
+	<% perm_id = permissions.collect { |p| p.id }.sort
+		 perm_id.each do |p| %>
 	<div><a class="button"> <%= p %> </a></div>
 	<% end %>
 </div>
 <div style="position=right">
-	<% permissions.each do |p| %>
+	<% perm_id.each do |p| %>
 	<div><a onClick="" class="button"> <%= p %> </a></div>
 	<% end %>
 </div>
+<div>
+	<% permissions.each do |p| %>
+		<p id="<%= "#{p.id}-description"%>"> <%= p.try(:description)||"" %></p>
+	<% end %>
+<div>
