Don't let jquery styles override button display type
it must be "inline" even within accordion <div>s

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -487,6 +487,7 @@ input.button,
 input[type="submit"] {
   background: #eee url(images/button-bg-rollover.gif) repeat-x scroll left top;
   color: #333;
+  display: inline !important;
   font-size: 12px;
   font-weight: bold;
   border: 1px solid #999;
