--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -732,6 +732,9 @@ input {
 .password-strength-bar {
   height: 3px;
 }
-
-
+/* status icons for services module */
+.service-icon { width: 20px; height: 20px; display:block; float:left;}
+.service-icon.running { background-image: url(/images/green.png); }
+.service-icon.dead { background-image: url(/images/red.png); }
+.service-icon.unknown { background-image: url(/images/grey.png); }
 
