--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -487,7 +487,6 @@ input.button,
 input[type="submit"] {
   background: #eee url(images/button-bg-rollover.gif) repeat-x scroll left top;
   color: #333;
-  display: inline !important;
   font-size: 12px;
   font-weight: bold;
   border: 1px solid #999;
@@ -500,7 +499,7 @@ input[type="submit"] {
   -moz-background-inline-policy:continuous;
   -moz-background-origin:padding;
   -webkit-border-radius: 4px;
-  width: auto !important;
+  width: auto;
   vertical-align: baseline;
 }
   a.button:hover,
