--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
     }
  </style>
 
- <script language='javascript'>
+ <% javascript_tag do %>
  jQuery.expr[':'].Contains = function(a, i, m) {
   return jQuery(a).text().toUpperCase().indexOf(m[3].toUpperCase()) >= 0;
  };
@@ -40,7 +40,7 @@
  // default state
  $('.del_user').hide();
 });//document.ready
-</script>
+<% end %>
 
 <% end %>
 <div class='plugin-icon'><img src='/icons/yast-users.png'/><%=_("Local Users")%></div>
