give hover button animation to all submit buttons

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -504,7 +504,8 @@ input[type="submit"] {
   vertical-align: baseline;
 }
   a.button:hover,
-  input.button:hover {
+  input.button:hover,
+  input[type="submit"]:hover {
     background-position:0 -22px;
     color:#FFF;
     text-shadow: 0 -1px 0 #252525;
