--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -91,7 +91,7 @@ $(document).ready(function() {
 <% end %>
 </div>
 <fieldset>
-<%= link_to _("Back"), :controller => "controlpanel" %> 
+<%= form_back_button %> 
 <%= form_str_spacer %>
 <%= link_to  _("Edit Limits"), '/status/edit', :class => "button" %>
 </fieldset>
