--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -155,9 +155,9 @@
     </fieldset>
   </div>
       <fieldset>
-        <%= link_to _('Cancel'), {:action => :index}%>
+        <%= form_back_button :action => :index%>
         <%= form_str_spacer %>
-        <%= f.submit _("Save"), :disabled => disabled, :onclick=>"return edit_user_validation();", :class => "button" %>
+        <%= form_next_button :disabled => disabled, :onclick=>"return edit_user_validation();" %>
       </fieldset>
 <% end %>
       <div><input type="hidden" id="all_grps_string" value="<%= @groups.all_grps_string %>" /></div>
