--- a/plugins/roles/app/views/roles/edit.rhtml
+++ b/plugins/roles/app/views/roles/edit.rhtml
@@ -1,1 +1,1 @@
-<%= render :partial => "role_edit", :locals => { :permissions => @permissions } %>
+<%= render :partial => "role_edit", :locals => { :permissions => @permissions, :role => @role } %>
