--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -48,7 +48,7 @@
 <div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Time")%></div>
 
 <div class="plugin-content grid_12">
-  <% form_tag '/systemtime/update', {:class => 'container', :onsubmit => "submitTime();"} do %>
+  <% form_tag '/time/update', {:class => 'container', :onsubmit => "submitTime();"} do %>
     <% #TODO tooltip for form <div> _("Table for settings timezone for target machine.")  </div>
     %>
   <fieldset id="" class="wrapper smallfields with-background">
