--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -19,21 +19,16 @@
     }, "<%= _("Enter a valid domain name or an IP address.") -%>");
 
     $(document).ready(function() {
+      $("#mailForm").validate()
+
       // make the error message translatable - override the default messsage
       $.extend($.validator.messages, {
-	equalTo: "<%= _("The passwords do not match.") -%>"
+	equalTo: "<%= _("The passwords do not match.") -%>",
+	email:	 "<%= _("Enter a valid e-mail address.") -%>"
       });
     });
-
-    // start password validation workaround only when "Save" button has been pressed
-    password_validation_enabled = false;
 </script>
 
-  <script type="text/javascript">
-     $(document).ready(function(){
-	$("#mailForm").validate()
-     });
-  </script>
 <% end %>
 
 <div class='plugin-icon'><img src='/icons/yast-mail-server.png'/><%=_("Mail Settings")%></div>
@@ -56,14 +51,18 @@
         <%= f.text_field :user, :disabled => disabled %></p>
       <p>
         <label><%=_("Password")%></label>
-        <%= f.password_field :password, :disabled => disabled, :onkeyup => "if (password_validation_enabled) $('#mailForm').validate().element('#mail_confirm_password')" %></p>
+        <%= f.password_field :password, :disabled => disabled %></p>
       <p>
         <label><%=_("Confirm password")%></label>
         <%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#mail_password" %>
       </p>
+      <p>
+        <label><%=_("Send test mail to")%></label>
+        <%= f.text_field :test_mail_address, :disabled => disabled, :class => "email" %>
+      </p>
     </fieldset> 
     <p>
-    <%= form_send_buttons :onclick=>"password_validation_enabled = true", :disabled => disabled %>
+    <%= form_send_buttons :disabled => disabled %>
     </p>
   <% end %>
 </div>
