Fixed broken button width in login screen

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -194,7 +194,8 @@ ul li {
     margin: 7px;
     overflow:hidden;
   }
-  #login-dialogue input {
+  #login-dialogue input[type="password"],
+  #login-dialogue input[type="text"], {
     width: 97%;
   }
   #login-dialogue h2,
