--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -195,7 +195,7 @@ ul li {
     overflow:hidden;
   }
   #login-dialogue input[type="password"],
-  #login-dialogue input[type="text"], {
+  #login-dialogue input[type="text"] {
     width: 97%;
   }
   #login-dialogue h2,
