store intermediate result of base system (bnc#555303)

--- a/webclient/app/views/controlpanel/basesystem.rhtml
+++ b/webclient/app/views/controlpanel/basesystem.rhtml
@@ -1,4 +1,4 @@
 <h2><img src="/images/yast-config.png" height="23" width="23" border="0" /> <%= _("Base system setup") %></h2>
 
-<h3><%= _("Your system setup was not completed. Please continue with setting up the modules.") %></h3>
+<h3><%= _("Your initial system setup was not completed. Please continue with setting up the modules.") %></h3>
 <a href="/controlpanel/thisstep" class="button"><%=_("Set up the system")%></a>
