improved invalid alias error message
put the invalid characters out of the error message, it makes translation
easier (the list contains many escaped characters), don't bother traslators
with it and changing the list doesn't require retranslation anymore

--- a/plugins/software/app/views/repositories/show.html.erb
+++ b/plugins/software/app/views/repositories/show.html.erb
@@ -21,7 +21,7 @@
 	  // PackageKit does not accept some special characters in alias
 	  || /^[^`'"\\\[\]^$\{\}<>]*$/i.test(value);
 
-	}, "<%= _("Symbols <b>^${}[]&gt;&lt;`\\'\\\"\\\\</b> are not allowed in repository alias.") -%>");
+	}, "<%= _("Symbols <b>%s</b> are not allowed in repository alias.") % "^${}[]&gt;&lt;`\\'\\\"\\\\" -%>");
 
         // validate the form
 	$("#repositoryForm").validate()
