- added button for sending mail without leaving dialog (bnc#587453) - 0.1.8

--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -59,6 +59,7 @@
       <p>
         <label><%=_("Send test mail to")%></label>
         <%= f.text_field :test_mail_address, :disabled => disabled, :class => "email" %>
+	<%= f.submit _("Send Mail"), :name => "send_mail", :disabled => disabled %>
       </p>
     </fieldset> 
     <p>
