--- a/plugins/registration/app/views/registration/index.rhtml
+++ b/plugins/registration/app/views/registration/index.rhtml
@@ -11,6 +11,24 @@
     $("#accordion").accordion('activate',false);
   });
   <% end %>
+
+  <% javascript_tag do -%>
+  $(document).ready(function(){
+    $("#registrationform").validate({
+      rules: {
+        registration_arg_email: {
+          required: true,
+          email: true
+        }
+      },
+      messages: {
+       registration_arg_email: {
+         required: "<%= _("Please enter a valid Email address.") %>",
+         email: "<%= _("Please enter a valid Email address.") %>"
+       }
+      }
+    })});
+  <% end %>
 <% end %>
 
 <div class='plugin-icon'><img src='/icons/yast-product-registration.png' alt="<%= _("register plugin") %>"/><%=_("Registration")%></div>
@@ -37,7 +55,7 @@
      </fieldset>
   <% else %>
 
-    <% form_tag form_target_save, { :onsubmit => "$('#progress').show()" } do -%>
+    <% form_tag form_target_save, { :id => "registrationform", :onsubmit => "$('#progress').show()" } do -%>
 
       <% if @arguments_mandatory then %>
       <fieldset class="wrapper with-background width-75">
@@ -72,7 +90,14 @@
       <% end %>
 
       <fieldset>
-        <%= form_send_buttons %>
+        <% if @arguments_mandatory.kind_of?(Array) && !@arguments_mandatory.select{ |p|  p["name"]=="email" }.empty?
+             onclick_action = "return $('#registrationform').validate().element('#registration_arg_email');"
+             # FIXME FIXME - this does not work yet
+           else
+             onclick_action = "return true;"
+           end
+        %>
+        <%= form_send_buttons :onclick => onclick_action %>
           <%= if basesystem_in_process? then
                 link_to _('Skip'), {:controller => :registration, :action =>:skip}, :onclick=>"$('#progress').show()", :class => "button"
               end %>
